plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.isums'
version = '0.0.1-SNAPSHOT'
description = 'notification-service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
configurations.configureEach {
    resolutionStrategy {
        force 'com.google.protobuf:protobuf-java:4.34.0'
        force 'com.google.protobuf:protobuf-java-util:4.34.0'
        eachDependency { details ->
            if (details.requested.group == 'com.google.protobuf' && (details.requested.name == 'protobuf-java' || details.requested.name == 'protobuf-java-util')) {
                details.useVersion '4.34.0'
                details.because 'Keep protobuf runtime aligned with generated proto-common classes'
            }
        }
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "GitHubPackages"
        url = uri("https://maven.pkg.github.com/Management-System-for-Rental-SEP490/ISUMS_Proto-common_gRPC-Maven-local")
        credentials {
            username = System.getenv("GITHUB_ACTOR") ?: ""
            password = System.getenv("GITHUB_TOKEN") ?: ""
        }
    }
    maven {
        name = "GitHubPackagesObservability"
        url = uri("https://maven.pkg.github.com/Management-System-for-Rental-SEP490/ISUMS_Observability-Common")
        credentials {
            username = System.getenv("GITHUB_ACTOR") ?: ""
            password = System.getenv("GITHUB_TOKEN") ?: ""
        }
    }
}

ext {
    set('springCloudVersion', "2025.1.0")
    set('springGrpcVersion', "1.0.2")
}

dependencies {
    implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.isums:isums-observability-common:1.0-SNAPSHOT'
    implementation 'org.springframework.boot:spring-boot-starter-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'io.grpc:grpc-services'
    implementation 'org.apache.kafka:kafka-streams'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
    implementation 'org.springframework.grpc:spring-grpc-server-web-spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation(platform("io.awspring.cloud:spring-cloud-aws-dependencies:4.0.0"))
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-ses'
    // Polly for Japanese/English TTS pre-synth + S3 for audio cache
    implementation 'software.amazon.awssdk:polly'
    implementation 'software.amazon.awssdk:s3'
    // SNS for transactional SMS (primary VN SMS path — works without
    // brandname registration; in Sandbox mode requires per-destination
    // phone-number verification, then auto-promoted out of Sandbox once
    // AWS approves the production access request).
    implementation 'software.amazon.awssdk:sns'
    implementation 'software.amazon.awssdk:pinpointsmsvoicev2'
    // Stringee REST API JWT auth (HS256 signing). nimbus-jose-jwt already
    // pulled by spring-boot-starter-oauth2-resource-server, but pin here
    // for clarity.
    implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation "org.springframework.grpc:spring-grpc-client-spring-boot-starter"
    implementation "org.springframework.grpc:spring-grpc-spring-boot-starter"
    implementation "io.grpc:grpc-netty-shaded"
    implementation platform("io.github.resilience4j:resilience4j-bom:2.3.0")
    implementation "io.github.resilience4j:resilience4j-ratelimiter"
    implementation "io.github.resilience4j:resilience4j-retry"
    implementation 'io.lettuce:lettuce-core:7.3.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.github.spullara.mustache.java:compiler:0.9.14'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.google.protobuf:protobuf-java:4.34.0'
    implementation "com.isums:proto-common:1.0-SNAPSHOT"
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.grpc:spring-grpc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.grpc:spring-grpc-dependencies:${springGrpcVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('bootBuildImage') {
    runImage = 'paketobuildpacks/ubuntu-noble-run:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}
